# icse-generalization-artifact

./: .gitignore  README.md  check_instcombine_tests.py  find_imports.py  init_env.sh  init_token_template.sh  instcombine_prs.json  pyproject.toml  requirements.txt  run_exp.sh  run_exp_real.sh
.tmp/: symbolizer-input-9107d8  symbolizer-output-73daed
RAG/: __init__.py  __main__.py  cli.py  config.py  dataset.py  index_builder.py  query_src.ll  query_tgt.ll  requirements.txt  retriever.py
agent/: .env.example  README-zh.md  README.md  REFACTOR-GUIDE.md  __init__.py  config.yaml  discriminating_tests.py  env_config.py  init_agent_env.sh  llm-reasoning-level-guide.md  llvm_agent.py  llvm_env.py  retest_patches.py  run.py  run_batch.py  run_real.py
cost/: compile.sh
dataset-all/: 10013.json  107228.json  117436.json  117961.json  118155.json  120775.json  121700.json  121771.json  121773.json  121776.json  121853.json  122388.json  126056.json  126670.json  132503.json  134070.json  134513.json  142497.json  142744.json  146178.json  147176.json  147239.json  147456.json  152948.json  154238.json  157113.json  157371.json  160066.json  49229.json  55016.json  55470.json  55645.json  56795.json  56926.json  57448.json  57531.json  57635.json  57741.json  58523.json  59555.json  (+39 more)
dataset-gt76666/: 104772.json  115683.json  121775.json  130179.json  133367.json  142674.json  142711.json  145875.json  146263.json  151043.json  155941.json  156898.json  162451.json  164436.json  78038.json  85250.json  85551.json  90020.json  94170.json  94737.json  98800.json  99497.json
(+11171 files in other folders)
