[project]
name = "auto-opt"
version = "0.1.0"
description = "LLVM missed-optimization pipeline and autonomous fixing agent."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "dateparser==1.2.0",
    "jsonlines==4.0.0",
    "matplotlib>=3.8,<4",
    "mini-swe-agent>=2,<3",
    "openai>=2.8.0,<3",
    "psutil==6.1.1",
    "python-dotenv==1.0.1",
    "requests==2.32.4",
    "tqdm==4.66.5",
    "tree-sitter==0.23.2",
    "tree-sitter-cpp==0.23.4",
    "unidiff==0.7.5",
]

[tool.uv]
package = false
